<resources>
    <string name="app_name" translatable="false">Mushaf</string>
    <string name="app_name_google_play" translatable="false">Mushaf for Android</string>
    <string name="app_version" translatable="false">V1.2.0.0</string>
    <string name="playback_channel_name" translatable="false">Playback</string>
    <string name="playback_channel_description" translatable="false">Playback Channel</string>

    <string name="surah">Surah</string>
    <string name="bookmark_add">Bookmark</string>
    <string name="bookmark_remove">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="Notes">Notes</string>
    <string name="quran">Quran</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="reciters">Reciters</string>
    <string name="more">More</string>
    <string name="last_page">Last page</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Connection Error</string>
    <string name="juz">Juz\'</string>
    <string name="preview_quran" translatable="false">الم 1 ذَلِكَ الْكِتَابُ لَا رَيْبَ فِيهِ هُدًى لِلْمُتَّقِينَ 2 الَّذِينَ يُؤْمِنُونَ بِالْغَيْبِ وَيُقِيمُونَ الصَّلَاةَ وَمِمَّا رَزَقْنَاهُمْ يُنْفِقُونَ 3
    </string>
    <string name="preview_translation">In the name of God, The Most Gracious, The Dispenser of Grace:</string>
    <string name="translate">Translate</string>
    <string name="tafseer">Tafseer</string>
    <string name="play">Play</string>
    <string name="word_by_word">Word by word</string>
    <string name="connection_error_full_msg">Check your mobile data or Wi-Fi and try again, if the problem presiste
        contact support.
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word_by_word_confirmation">Word by word is available only in English</string>

    <string name="add_book">Add Book</string>
    <string name="translation">Translation</string>
    <string name="manage_library">Manage Library</string>
    <string name="translation_tools" translatable="false">It is they who follow the guidance [which comes from their
        Sustainer; and it is
        they, they who\' shall attain to a happy state!
    </string>
    <string name="choose_surah">Choose Surah</string>
    <string name="no_data_stored">No item found</string>
    <string name="no_result">No result found</string>
    <string name="to_aya">To Aya</string>
    <string name="from_aya">From Aya</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="repeat_whole_set">Repeat whole set</string>
    <string name="play_each_verse">Play each verse</string>
    <string name="streaming_online">Stream online</string>
    <string name="error_downloading">Downloading Error</string>
    <string name="search_the_quran">Search the Quran</string>
    <string name="found">Found in surah</string>
    <string name="type_to_search">Type to Search</string>
    <string name="result_for">result for</string>
    <string name="wait">Please wait!!</string>
    <string name="empty_search_query">Type first to Search</string>
    <string name="In">in</string>
    <string name="page">page</string>
    <string name="aya">Aya</string>
    <string name="remove_bookmark">Bookmark removed</string>
    <string name="undo">Undo</string>
    <string name="ayah_copied_popup">ayah_coped</string>
    <string name="share_ayah_text">Share aya</string>
    <string name="share_translation">Share translation/tafsir</string>
    <string name="copy_text">Copy</string>
    <string name="text_copied">Text Copied</string>
    <string name="share">Share</string>
    <string name="no_bookmarks">No Bookmarks Saved Yet</string>
    <string name="dark_mode">Dark mode</string>
    <string name="arabic_mode">Arabic mode</string>
    <string name="translation_with_aya">Display translation with Aya</string>
    <string name="arabic_numbers">Show Arabic numbers</string>
    <string name="arabic_number_off_summery">When it\'s disabled it will follow current app language</string>
    <string name="arabic_mode_off">When it\'s disabled it will follow current system language</string>
    <string name="about">About</string>
    <string name="data_disclaimer">Disclaimer</string>
    <string name="cancelled">Cancelled</string>
    <string name="save_in_bookmarks">Save in bookmarks</string>
    <string name="no_repeating">none</string>
    <string name="disclaimer_summery">All data is retrieved from \'alquran.cloud\' and it\'s their responsibility to verify the data validity so the app developer team of Mushaf is not responsible for any
        mistake or incorrectness in the provided data in the app, please if you find any error please report them.
    </string>
    <string name="word">A Statement</string>
    <string name="word_summery">May Allah accept this humble work, which was done in good faith to benefit Muslims
        wherever they are. We also hope to make it a reason to save us from the punishment of the Hellfire, and may
        Allah grant those who participated in developing the application or helped accomplishing it, the Paradise.
    </string>
    <string name="downloading">Downloading…</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_process">Cancel</string>
    <string name="app_ِappearance">Appearance</string>
    <string name="reading">Reading</string>
    <string name="privacy_and_details"><![CDATA[Privacy & Open Source]]></string>
    <string name="aya_number">Aya number</string>
    <string name="select_aya">Select Aya</string>
    <string name="move_to_aya">Move To Aya</string>
    <string name="go_to_page">Go to Page</string>
    <string name="hizb">Hizb</string>
    <string name="enter_page_number">Enter page number from 1 and 604</string>
    <string name="number">number</string>
    <string name="navigate_to">Navigate to</string>
    <string name="enter_number">Enter number!</string>
    <string name="quarter">Quarter</string>
    <string name="playing_error">Playing Error</string>
    <string name="audio_quality_options" translatable="false">audio_quality_options</string>
    <string name="audio_quality_title">Reciter audio quality</string>
    <string name="audio_quality_summary">Changing this setting will only affect audio online streaming. Increasing audio
        quality will increase data usage
    </string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="small_font_size">Small</string>
    <string name="medium">Medium</string>
    <string name="medium_font_size">Medium</string>
    <string name="large_font_size">Large</string>
    <string name="x_large_font_size">Very Large</string>
    <string name="select_word_leaset">Please select at least one word</string>
    <string name="bookmark_removed">Bookmarked removed</string>
    <string name="bookmard_saved">Bookmark saved</string>
    <string name="shortcut_created">Shortcut Created</string>
    <string name="unable_to_add_shortcut">Unable to add a shortcut</string>
    <string name="add_shortcut">Add shortcut to home screen</string>
    <string name="open_source_license">Open Source License</string>
    <string name="download_completed">Download complete</string>
    <string name="downloading_please_wait">Downloading Please Wait</string>
    <string name="background_download">Download in background</string>
    <string name="no_translation_tafeer_downloaded">No Translation/Tafseer Downloaded</string>
    <string name="definition">Definition</string>
    <string name="tafseer_translation">Translation</string>
    <string name="select_translation">Select Translation</string>
    <string name="vertical_quran_page_summry">Sliding between Quran pages will be vertical instead of horizontal</string>
    <string name="vertical_quran_page">Vertical Quran page</string>
    <string name="font_size_key">Font size</string>
    <string name="previewing_text">Text preview</string>
    <string name="play_surah_to_end">Play surah to end</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
