<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginHorizontal="12dp"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/textSizeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:textColor="?android:textColor"
            android:id="@+id/textSizeName"
            style="@style/AppTheme.Title.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            tools:text="@string/medium" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/selectedTextSizeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        tools:cardUseCompatPadding="false"
        android:paddingHorizontal="12dp"
        android:paddingBottom="12dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="?readBackground"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quranTextViewSize"
                    style="@style/QuranicText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/preview_quran" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/translationTextViewSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TafseerText"
                    android:padding="8dp"
                    android:text="@string/preview_translation" />

                <TextView
                    android:layout_marginTop="6dp"
                    android:textColor="@color/colorTextSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?itemBg"
                    android:padding="8dp"
                    android:text="@string/previewing_text"
                    style="@style/AppTheme.Text.Secondary"
                    tools:text="Preview Quran Text" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
