<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:minWidth="320dp"
    android:layout_height="410dp"
    android:layout_gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <TextView
        android:id="@+id/textView3"
        style="@style/AppTheme.Title.Bold.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/downloading"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/loading_view"
        android:layout_marginBottom="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_download"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimaryDark" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/focusColor"
            android:textStyle="bold"
            app:backgroundTint="@color/white" />

    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_progress="0"
        app:lottie_rawRes="@raw/loading_anim" />

    <TextView
        android:id="@+id/loading_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/loading_view"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_125sdp"
        android:text="0%"
        android:textAllCaps="true"
        android:textAppearance="@style/AppTheme.Title.Bold"
        android:textColor="#fff"
        android:textSize="@dimen/_35ssp"
        app:backgroundTint="@color/colorPrimaryDark" />
</RelativeLayout>